--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "micro-frontend-shell",
+  "name": "dex-web",
   "version": "1.0.1",
   "description": "",
   "main": "src/index.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lthtv8/micro-frontend-shell.git"
+    "url": "git+https://github.com/coinmap-dex/dex-web"
   },
   "author": "HoangLy94 <lthtv8@gmail.com>",
   "license": "MIT",
@@ -35,6 +35,7 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.31.1",
     "react-i18next": "^11.15.5",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
@@ -156,8 +157,8 @@
     }
   },
   "bugs": {
-    "url": "https://github.com/lthtv8/micro-frontend-shell/issues"
+    "url": "https://github.com/coinmap-dex/dex-web/issues"
   },
-  "homepage": "https://github.com/lthtv8/micro-frontend-shell#readme",
+  "homepage": "https://github.com/coinmap-dex/dex-web#readme",
   "keywords": []
 }
