--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "core-js": "^3.21.1",
+    "ethers": "^5.6.8",
     "express": "^4.17.1",
     "i18next": "^21.6.12",
     "i18next-http-backend": "^1.3.2",
@@ -38,7 +39,7 @@
     "react-hook-form": "^7.31.1",
     "react-i18next": "^11.15.5",
     "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^5.0.0",
@@ -67,8 +68,8 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
-    "@types/react-router": "^5.1.14",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.9",
     "@types/webpack": "^5.28.0",
