--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^3.21.1",
     "ethers": "^5.6.8",
     "express": "^4.17.1",
+    "framer-motion": "^6.4.3",
     "i18next": "^21.6.12",
     "i18next-http-backend": "^1.3.2",
     "i18next-resources-to-backend": "^1.0.0",
@@ -38,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.1",
     "react-i18next": "^11.15.5",
+    "react-intersection-observer": "^9.3.5",
     "react-redux": "^7.2.4",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
