--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.31.1",
     "react-i18next": "^11.15.5",
     "react-intersection-observer": "^9.3.5",
